stuff added: - map for minigame 2 and 3 added problems left: - problemen met de kleur zwart => doorzichtig - rechterkant op minigame 1,2,3 en start scene => wss wingrit fouten - kan schaar(frame 0) niet selecteren - tekst doet raar??

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(${PROJECT_NAME}.elf
         background.h
         MiniGame1.cpp
         MiniGame1.h
-        GameRoom.h RPCselect.h)
+        GameRoom.h RPCselect.h MiniGame2.cpp MiniGame2.h GameRoom2.h MiniGame3.h MiniGame3.cpp GameRoom3.h)
 
 target_link_libraries(${PROJECT_NAME}.elf gba-sprite-engine)
 
